sets plotting configuration

--- a/Heart_disease_EDA_v2.ipynb
+++ b/Heart_disease_EDA_v2.ipynb
@@ -66,11 +66,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18e9948a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Professional plotting configuration\n",
+    "plt.style.use('seaborn-v0_8-whitegrid')\n",
+    "sns.set_palette(\"husl\")\n",
+    "plt.rcParams.update({\n",
+    "    'figure.figsize': (12, 8),\n",
+    "    'axes.titlesize': 16,\n",
+    "    'axes.labelsize': 14,\n",
+    "    'xtick.labelsize': 12,\n",
+    "    'ytick.labelsize': 12,\n",
+    "    'legend.fontsize': 12,\n",
+    "    'figure.titlesize': 18,\n",
+    "    'axes.spines.top': False,\n",
+    "    'axes.spines.right': False\n",
+    "})\n",
+    "print(\"=\" * 50)"
+   ]
   },
   {
    "cell_type": "code",
