checks for data properties

--- a/Heart_disease_EDA_v2.ipynb
+++ b/Heart_disease_EDA_v2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "601ff6a0",
    "metadata": {},
    "outputs": [],
@@ -66,20 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "18e9948a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Professional plotting configuration\n",
+    "# Plotting configuration\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_palette(\"husl\")\n",
     "plt.rcParams.update({\n",
@@ -92,8 +84,7 @@
     "    'figure.titlesize': 18,\n",
     "    'axes.spines.top': False,\n",
     "    'axes.spines.right': False\n",
-    "})\n",
-    "print(\"=\" * 50)"
+    "})"
    ]
   },
   {
@@ -127,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# loading data\n",
     "uploaded = Path(\"/workspaces/Early_Detection_of_Heart_Disease-/heart.csv.xls\")\n",
     "if uploaded.exists():\n",
     "    try:\n",
@@ -140,8 +131,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1ab1274a",
+   "execution_count": null,
+   "id": "75a5c611",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Sex', 'ChestPainType', 'RestingBP', 'Cholesterol', 'FastingBS',\n",
+       "       'RestingECG', 'MaxHR', 'ExerciseAngina', 'Oldpeak', 'ST_Slope',\n",
+       "       'HeartDisease'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for data in each column\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc418fe",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +166,19 @@
      "text": [
       "Shape: (918, 12)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# checking for the shape of the data\n",
+    "print(\"Shape:\", df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c667e01f",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -333,14 +361,146 @@
        "7              N      0.0       Up             0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Shape:\", df.shape)\n",
+    "# checking for data in first eight rows\n",
     "df.head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0bce0ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                 int64\n",
+       "Sex                object\n",
+       "ChestPainType      object\n",
+       "RestingBP           int64\n",
+       "Cholesterol         int64\n",
+       "FastingBS           int64\n",
+       "RestingECG         object\n",
+       "MaxHR               int64\n",
+       "ExerciseAngina     object\n",
+       "Oldpeak           float64\n",
+       "ST_Slope           object\n",
+       "HeartDisease        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for the data types\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      ATA\n",
+       "1      NAP\n",
+       "2      ATA\n",
+       "3      ASY\n",
+       "4      NAP\n",
+       "      ... \n",
+       "913     TA\n",
+       "914    ASY\n",
+       "915    ASY\n",
+       "916    ATA\n",
+       "917    NAP\n",
+       "Name: ChestPainType, Length: 918, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for kind of data in ChestPainType column\n",
+    "df['ChestPainType']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4318e2c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      M\n",
+       "1      F\n",
+       "2      M\n",
+       "3      F\n",
+       "4      M\n",
+       "      ..\n",
+       "913    M\n",
+       "914    M\n",
+       "915    M\n",
+       "916    F\n",
+       "917    M\n",
+       "Name: Sex, Length: 918, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking for kind of data in sex column\n",
+    "df['Sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dfdbcd44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Normal\n",
+       "1      Normal\n",
+       "2          ST\n",
+       "3      Normal\n",
+       "4      Normal\n",
+       "        ...  \n",
+       "913    Normal\n",
+       "914    Normal\n",
+       "915    Normal\n",
+       "916       LVH\n",
+       "917    Normal\n",
+       "Name: RestingECG, Length: 918, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for kind of data in resting ecg\n",
+    "df['RestingECG']"
    ]
   },
   {
@@ -353,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2b04dc60",
    "metadata": {},
    "outputs": [
@@ -481,6 +641,102 @@
     "# Show missingness\n",
     "miss = df_clean.isna().sum().sort_values(ascending=False)\n",
     "display(miss.to_frame('n_missing').head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9577d785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected target variable: 'HeartDisease'\n",
+      "\n",
+      " COMPREHENSIVE DATA PROFILE\n",
+      "----------------------------------------\n",
+      "Dataset Shape: 918 rows × 12 columns\n",
+      "Memory Usage: 0.27 MB\n",
+      "\n",
+      "Data Types Distribution:\n",
+      "  int64: 6 columns\n",
+      "  object: 5 columns\n",
+      "  float64: 1 columns\n",
+      "\n",
+      "✅ No missing values detected!\n",
+      "\n",
+      "🔍 Duplicate rows: 0 (0.00%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. ADVANCED DATA PROFILING & QUALITY ASSESSMENT\n",
+    "# ============================================================================\n",
+    "\n",
+    "def comprehensive_data_profile(df):\n",
+    "    \"\"\"\n",
+    "    Google-standard data profiling with statistical rigor\n",
+    "    \"\"\"\n",
+    "    print(\"\\n COMPREHENSIVE DATA PROFILE\")\n",
+    "    print(\"-\" * 40)\n",
+    "    \n",
+    "    # Basic info\n",
+    "    print(f\"Dataset Shape: {df.shape[0]:,} rows × {df.shape[1]} columns\")\n",
+    "    print(f\"Memory Usage: {df.memory_usage(deep=True).sum() / 1024**2:.2f} MB\")\n",
+    "    \n",
+    "    # Data types analysis\n",
+    "    dtype_counts = df.dtypes.value_counts()\n",
+    "    print(f\"\\nData Types Distribution:\")\n",
+    "    for dtype, count in dtype_counts.items():\n",
+    "        print(f\"  {dtype}: {count} columns\")\n",
+    "    \n",
+    "    # Missing data analysis\n",
+    "    missing_stats = pd.DataFrame({\n",
+    "        'Missing_Count': df.isnull().sum(),\n",
+    "        'Missing_Percentage': (df.isnull().sum() / len(df)) * 100\n",
+    "    }).sort_values('Missing_Percentage', ascending=False)\n",
+    "    \n",
+    "    if missing_stats['Missing_Count'].sum() > 0:\n",
+    "        print(f\"\\n⚠️  Missing Data Summary:\")\n",
+    "        print(missing_stats[missing_stats['Missing_Count'] > 0].round(2))\n",
+    "    else:\n",
+    "        print(f\"\\n✅ No missing values detected!\")\n",
+    "    \n",
+    "    # Duplicate analysis\n",
+    "    duplicates = df.duplicated().sum()\n",
+    "    print(f\"\\n🔍 Duplicate rows: {duplicates} ({duplicates/len(df)*100:.2f}%)\")\n",
+    "    \n",
+    "    return missing_stats\n",
+    "\n",
+    "# Normalize column names and create working copy\n",
+    "df.columns = [c.strip() for c in df.columns]\n",
+    "df_clean = df.copy()\n",
+    "\n",
+    "# Advanced data cleaning\n",
+    "df_clean = df_clean.drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "# Intelligent target detection\n",
+    "candidate_targets = [c for c in df_clean.columns \n",
+    "                    if c.lower() in {'heartdisease', 'target', 'outcome', 'label', 'num', 'disease'}]\n",
+    "target = candidate_targets[0] if candidate_targets else \"HeartDisease\"\n",
+    "\n",
+    "print(f\"Detected target variable: '{target}'\")\n",
+    "\n",
+    "# Advanced data type optimization\n",
+    "numeric_candidates = ['Age', 'RestingBP', 'Cholesterol', 'MaxHR', 'Oldpeak', 'FastingBS']\n",
+    "for col in numeric_candidates:\n",
+    "    if col in df_clean.columns:\n",
+    "        df_clean[col] = pd.to_numeric(df_clean[col], errors='coerce')\n",
+    "\n",
+    "# Standardize categorical variables\n",
+    "if 'Sex' in df_clean.columns:\n",
+    "    df_clean['Sex'] = df_clean['Sex'].astype(str).str.strip().str.upper()\n",
+    "    df_clean['Sex'] = df_clean['Sex'].replace({'MALE': 'M', 'FEMALE': 'F'})\n",
+    "\n",
+    "# Run comprehensive profiling\n",
+    "missing_stats = comprehensive_data_profile(df_clean)"
    ]
   },
   {
